<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="demo_artist_name">max roach</string>
    <string name="artist_search_hint">Search for an artist</string>
    <string name="artist_image_content_description">Artist image</string>
    <string name="error_no_artists_found">Too obscure, hipster</string>

    <!-- menu page -->
    <string name="title">My Nanodegree Apps</string>
    <!-- app names -->
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Built It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>

    <!-- messaging -->
    <string name="button_selected_message_prefix">This button will launch my </string>
    <string name="title_activity_artist_search">Artist Search</string>
    <string name="title_activity_artist_top_tracks">Top Tracks</string>
    <string name="action_try_again">Try again</string>
    <string name="error_no_top_tracks">This artist has no top tracks</string>
    <string name="error_no_connectivity">You have no Internet connectivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_demoitem_list">DemoItems</string>
    <string name="title_demoitem_detail">DemoItem Detail</string>
    <string name="title_activity_playback"></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_now_playing">Now Playing</string>

</resources>
