<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"/>
    <Button
        android:id="@+id/spotifyStreamer"
        style="@style/ButtonStyleFirstFive"
        android:text="@string/spotify_streamer"/>
    <Button
        android:id="@+id/scoresApp"
        style="@style/ButtonStyleFirstFive"
        android:text="@string/scores_app"/>
    <Button
        android:id="@+id/libraryApp"
        style="@style/ButtonStyleFirstFive"
        android:text="@string/library_app"/>
    <Button
        android:id="@+id/builtItBigger"
        style="@style/ButtonStyleFirstFive"
        android:text="@string/build_it_bigger"/>
    <Button
        android:id="@+id/xyz_reader"
        style="@style/ButtonStyleFirstFive"
        android:text="@string/xyz_reader"/>
    <Button
        android:id="@+id/capstone"
        style="@style/ButtonStyleCapstone"
        android:text="@string/capstone"/>

</LinearLayout>
